--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
       <h3>משפחה</h3>
     </div>
     <div class="article1">
-      <img src="p13.jpg" alt="" />
+      <img src="p13.jpg" class="img-r"/>
+      <img src="p16.jpg" class="img-l">
     </div>
     
   <div class="article2">
     <img src="p14.jpg" class="right-img"> 
     <img src="p15.jpg" class="left-img">
 
-    <h2>פנדה חומה</h2>
-    <p>האם הפנדה החומה היא החיה האהובה ביותר על ילדיכם? ...</p>
+    <h2>שיר אוסי</h2>
+    <p>האם את אוהבת סושי???</p>
 </div>
 
     <p>
